force-app/main/default/objects/myV2MOM__Measure__c/myV2MOM__Measure__c.object-meta.xml
<CustomObject>
    <label>Measure</label>
    <nameField>
        <label>Measure Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Measures</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>