force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Assigned_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Assigned_Current_Value__c</fullName>
    <label>Assigned Current Value</label>
    <summarizedField>myV2MOM__Measure_Team__c.myV2MOM__Current_Value__c</summarizedField>
    <summaryForeignKey>myV2MOM__Measure_Team__c.myV2MOM__Measure__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>