force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Comments__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Comments__c</fullName>
    <label>Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>