force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Completion_By_Date__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Completion_By_Date__c</fullName>
    <label>Completion By Date</label>
    <type>Date</type>
</CustomField>