force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Completion_By_Quarter__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Completion_By_Quarter__c</fullName>
    <label>Completion By Quarter</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Q1</fullName>
            </value>
            <value>
                <fullName>Q2</fullName>
            </value>
            <value>
                <fullName>Q3</fullName>
            </value>
            <value>
                <fullName>Q4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>