force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Current_Value__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Current_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Current Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>