force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Measure_Team_Member_Count__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Measure_Team_Member_Count__c</fullName>
    <label>Measure Team Member Count</label>
    <summaryFilterItems>
        <field>myV2MOM__Measure_Team__c.myV2MOM__Type__c</field>
        <operation>equals</operation>
        <value>Assigned</value>
    </summaryFilterItems>
    <summaryForeignKey>myV2MOM__Measure_Team__c.myV2MOM__Measure__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>