force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__MeasureChatFeedId__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__MeasureChatFeedId__c</fullName>
    <label>MeasureChatFeedId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>