force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Method__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Method__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Method</label>
    <referenceTo>myV2MOM__Method__c</referenceTo>
    <relationshipLabel>Measures</relationshipLabel>
    <relationshipName>Measures</relationshipName>
    <type>Lookup</type>
</CustomField>