force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Q2_Completion__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Q2_Completion__c</fullName>
    <formula>myV2MOM__Q2__c/myV2MOM__Q2_Target__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Q2 Completion</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>