force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Q3__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Q3__c</fullName>
    <label>Q3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>