force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Q3_Target__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Q3_Target__c</fullName>
    <label>Q3 Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>