force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Split_By_Quarter__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Split_By_Quarter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split By Quarter</label>
    <type>Checkbox</type>
</CustomField>