force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Total_Current_Value__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Total_Current_Value__c</fullName>
    <formula>myV2MOM__Assigned_Current_Value__c +  myV2MOM__Current_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Current Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>