force-app/main/default/objects/myV2MOM__Measure__c/fields/myV2MOM__Track_Progress_By__c.field-meta.xml
<CustomField>
    <fullName>myV2MOM__Track_Progress_By__c</fullName>
    <label>Track Progress By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completion Status</fullName>
            </value>
            <value>
                <fullName>Numbers Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>